Product Page fixed
last one was messed up by github...

--- a/Products.css
+++ b/Products.css
@@ -1,18 +1,3 @@
-<<<<<<< HEAD
-#logo {
-	width: 1024px;
-	border: 0px solid black;
-	margin:20px auto;
-	height: 900px;
-	font-family: Chalkduster;
-	text-align: left;
-}
-.a {
-	color: blue;
-
-header {
-	width:960px;
-=======
 #HeaderBox {
 	float:left;
 	width:493px;
@@ -22,28 +7,11 @@ header {
 	
 header {
 	width:1100px;
-<<<<<<< HEAD
-=======
-	
->>>>>>> 0559f52047b176d586df1ff2e15fb014a6f37a98
->>>>>>> 86a0e90b5c0d03fc73b6aecd6b5f4c9a386e10a6
 	margin: 0 auto;
 }
 
 h1  {
 	text-align: left;
-<<<<<<< HEAD
-
-}
-.box{
-	float:left;
-	width: 233px;
-	height: 300px;
-	background-color: #87D0F5;
-	margin: 0 25px;
-}
-
-=======
 }
 
 h2	{
@@ -143,4 +111,3 @@ p	{
 	}
 	
 	
->>>>>>> 0559f52047b176d586df1ff2e15fb014a6f37a98
